[package]
name = "ectoken"
version = "0.2.2"
authors = ["Benoît Burnichon <bburnichon@gmail.com>"]
edition = "2018"
description = "Token Generator for Edgecast Token-Based Authentication from Verizon Digital Media Services"
license = "MIT/Apache-2.0"
homepage = "https://github.com/deezer/rust-ectoken"
repository = "https://github.com/deezer/rust-ectoken"
readme = "README.md"

[dependencies]
base64 = "^0.13"
rand = "^0.7" 
rust-crypto = "^0.2"
